# rquickjs

./: .clippy.toml  .gdb_history  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  todo.md  wasm32_wasip1_test_output.txt  x86_test_output.txt
core/: Cargo.toml  README.md
core/src/: allocator.rs  class.rs  context.rs  js_lifetime.rs  lib.rs  loader.old.rs  loader.rs  markers.rs  persistent.rs  promise.rs  property.rs  result.rs  runtime.rs  safe_ref.rs  util.rs  value.rs
core/src/allocator/: rust.rs
core/src/class/: borrow.rs  builder.rs  cell.rs  ffi.rs  id.rs  impl_.rs  inherits.rs  refs.rs  trace.rs
core/src/context/: async.rs  base.rs  builder.rs  ctx.rs  future.rs  multi_with_impl.rs  owner.rs  ref.rs
core/src/context/async/: future.rs
core/src/loader/: builtin_loader.rs  builtin_resolver.rs  bundle.rs  compile.rs  file_resolver.rs  module_loader.rs  native_loader.rs  path.rs  script_loader.rs  typescript_loader.rs  util.rs
core/src/loader/old/: builtin_resolver.rs  bundle.rs  compile.rs  file_resolver.rs  (+2 more)
core/src/old/: class.rs
core/src/runtime/: async.rs  async_executor.rs  async_runtime.rs  async_runtime.rs.old  base.rs  exotic.rs  opaque.rs  raw.rs  schedular.rs  spawner.rs  task_queue.rs  userdata.rs
core/src/safe_ref/: base.rs  future.rs  future_async.rs  future_tokio.rs  parallel.rs
core/src/value/: array.rs  array_buffer.rs  atom.rs  bigint.rs  convert.rs  exception.rs  function.rs  iterable.rs  iterator.rs  module.rs  module.rs.old  object.rs  promise.rs  proxy.rs  string.rs  symbol.rs  typed_array.rs
core/tests/: compile_fail.rs
core/tests/async_compile_fail/: async_nested_contexts.rs  async_nested_contexts.stderr  captured_variable.rs  captured_variable_spawn.rs
core/tests/async_parallel_compile_fail/: capture_rc.stderr
examples/module-loader/: Cargo.toml  script_module.js
examples/module-loader/src/: bundle.rs  main.rs
examples/native-module/: Cargo.toml
examples/native-module/src/: hand_written.rs  lib.rs  using_macro.rs
macro/: Cargo.toml  README.md  my_module.js
macro/src/: attrs.rs  bind.rs  class.rs  common.rs  config.rs  context.rs  convert.rs  derive.rs  embed.rs  exotic.rs  fields.rs  function.rs  js_lifetime.rs  lib.rs  method.rs  methods.rs  module.rs  trace.rs  utils.rs
macro/src/bind/: attrs.rs  class.rs  constant.rs  function.rs  module.rs  property.rs
macro/src/derive/: attrs.rs  from_js.rs  has_refs.rs  into_js.rs
macro/src/embed/: attrs.rs  loader.rs
macro/src/methods/: accessor.rs  method.rs
macro/src/module/: config.rs  declare.rs  evaluate.rs  mod.rs
macro/src/old/: bind.rs  embed.rs
macro2/: Cargo.toml
macro2/src/: class.rs  lib.rs
macro2/src/class/: class_def.rs  has_refs.rs
macro2/src/method/: mod.rs
rquickjs-core/: Cargo.toml  README.md
rquickjs-core/src/: async_shim.rs  class.rs  class_id.rs  context.rs  lib.rs  loader.rs  markers.rs  promise.rs  property.rs  result.rs  runtime.rs  safe_ref.rs  value.rs
rquickjs-core/src/class/: refs.rs
rquickjs-core/src/context/: builder.rs  ctx.rs  multi_with_impl.rs
rquickjs-core/src/loader/: builtin_loader.rs  bundle.rs  compile.rs  file_resolver.rs  module_loader.rs  native_loader.rs  script_loader.rs
rquickjs-core/src/runtime/: async_executor.rs  async_runtime.rs  drop.rs
rquickjs-core/src/value/: array.rs  atom.rs  function.rs  module.rs  object.rs
rquickjs-macro/: Cargo.toml
rquickjs-macro/src/: attrs.rs  bind.rs  config.rs  context.rs  derive.rs  embed.rs  expand.rs  lib.rs  shim.rs  util.rs  utils.rs
rquickjs-macro/src/bind/: attrs.rs  class.rs  constant.rs  function.rs  module.rs  property.rs
rquickjs-macro/src/derive/: attrs.rs  from_js.rs  has_refs.rs  into_js.rs
rquickjs-macro/src/expand/: constant.rs  function.rs  module.rs
rquickjs-sys/: Cargo.toml  README.md  build.rs  tmp.h  wrapper.h
rquickjs-sys/patches/: atomic_new_class_id.patch  basic_msvc_compat.patch  check_stack_overflow.patch  infinity_handling.patch  quickjs.c.diff  quickjs.h.diff  read_module_exports.patch  reset_stack_pointer.patch  rquickjs.patch
rquickjs-sys/quickjs/: README.md  quickjs-libc.c  quickjs.c  quickjs.h
rquickjs-sys/quickjs/old/: quickjs.c
rquickjs-sys/src/: bindings.rs  lib.rs
rquickjs-sys/src/bindings/: i686-pc-windows-gnu.rs  i686-pc-windows-msvc.rs  i686-unknown-linux-gnu.rs  x86_64-apple-darwin.rs  x86_64-pc-windows-gnu.rs  x86_64-pc-windows-msvc.rs  x86_64-unknown-linux-gnu.rs
rquickjs-sys/src/inlines/: common.rs  ptr_32_nan_boxing.rs  ptr_64.rs
sys/: Cargo.toml  Makefile  README.md  build.rs  quickjs.bind.h  xmake.lua
sys/c-include/: quickjs-internals.h  quickjs.h
sys/c-include/quickjs/: cutils.h  quickjs-opcode.h  quickjs.h
sys/c-src/: .clang-format  anode-ext.c  anode-ext.h  cutils.c  libunicode.c  quickjs-internals.h  quickjs-opcode.h  quickjs.c  quickjs.h
sys/c-src-split/: anode-ext.h
sys/c-src-split/core/: builtins.h
sys/c-src/core/: base.h  malloc.c  malloc.h  module.c  quickjs-internals.h  runtime.c  types.h
sys/patches/: atomic_new_class_id.patch  basic_msvc_compat.patch  check_stack_overflow.patch  dynamic_import_sync.patch  error_column_number.patch  get_function_proto.patch  infinity_handling.patch  not_safe_for_wasi.patch  read_module_exports.patch
sys/src/: lib.rs
sys/src/bindings/: aarch64-apple-darwin.rs  aarch64-linux-android.rs  aarch64-pc-windows-msvc.rs  aarch64-unknown-linux-gnu.rs  aarch64-unknown-linux-musl.rs  armv7-unknown-linux-gnueabihf.rs  i686-pc-windows-gnu.rs  i686-pc-windows-msvc.rs  i686-unknown-linux-gnu.rs  loongarch64-unknown-linux-gnu.rs  loongarch64-unknown-linux-musl.rs  powerpc64-unknown-linux-gnu.rs  riscv64gc-unknown-linux-gnu.rs  wasm32-wasi.rs  wasm32-wasip1.rs  wasm32-wasip2.rs  x86_64-apple-darwin.rs  x86_64-pc-windows-gnu.rs  x86_64-pc-windows-msvc.rs  x86_64-unknown-freebsd.rs  x86_64-unknown-linux-gnu.rs  x86_64-unknown-linux-musl.rs
sys/src/inlines/: common.rs  ptr_32_nan_boxing.rs  ptr_64_nan_boxing.rs
util/: Cargo.toml
util/src/: lib.rs  url_search_params.rs
util/src/console/: formatter.rs  mod.rs
(+138 files in other folders)
