[package]
name = "rquickjs-macro"
readme = "README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
rquickjs-core = { workspace = true, features = ["loader"] }
proc-macro2 = "1"
proc-macro-crate = "3"
quote = "1"
ident_case = "1"
fnv = "1"
indexmap = "2"
convert_case = "0.6"
syn = { version = "2", features = ["full","fold","extra-traits","visit"] }
phf_shared = { version = "0.11", optional = true }
phf_generator = { version = "0.11",  optional = true }

[dev-dependencies]
rquickjs = { path = "../", features = ["macro", "futures","phf"] }
difference = "2"
async-std = { version = "1", features = ["attributes"] }

[features]
phf = ["phf_shared", "phf_generator"]
bindgen = ["rquickjs-core/bindgen"]
