[package]
name = "rquickjs-macro"
version = "0.11.0"
authors = ["K. <kayo@illumium.org>", "Mees Delzenne <mees.delzenne@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Procedural macros for rquickjs"
keywords = ["quickjs", "ecmascript", "javascript", "es6", "es2020"]
categories = ["api-bindings"]
repository = "https://github.com/DelSkayn/rquickjs.git"

[lib]
proc-macro = true

[dependencies]
rquickjs-core = { workspace = true, features = ["loader"] }
proc-macro2 = "1"
proc-macro-crate = "3"
quote = "1"
ident_case = "1"
fnv = "1"
indexmap = "2"
convert_case = "0.11"
syn = { version = "2", features = ["full", "fold", "extra-traits", "visit"] }
phf_shared = { version = "0.13", optional = true }
phf_generator = { version = "0.13", optional = true }

[dev-dependencies]
rquickjs = { path = "../", features = ["macro", "futures", "phf"] }
difference = "2"


[features]
phf = ["phf_shared", "phf_generator"]
bindgen = ["rquickjs-core/bindgen"]
