[package]
name = "rquickjs-macro2"
version = "0.1.7"
edition = "2021"
authors = ["Mees Delzenne <mees.delzenne@gmail.com>", "K. <kayo@illumium.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
proc-macro-crate = "1"
proc-macro-error = "1"
quote = "1"
ident_case = "1"
fnv = "1"
indexmap = "1"

[dependencies.darling]
version = "0.14"

[dependencies.syn]
version = "1"
features = ["full"]

[dependencies.phf_shared]
version = "0.10"
optional = true

[dependencies.phf_generator]
version = "0.10"
optional = true

[dependencies.rquickjs-core]
path = "../core"
version = "0.1.7"
features = ["loader"]

[dev-dependencies.difference]
version = "2"

[dev-dependencies.rquickjs]
path = ".."
version = "0.1.7"
features = ["macro2", "classes", "properties", "async-std"]

[dev-dependencies.async-std]
version = "1"
features = ["attributes"]

[features]
phf = ["phf_shared", "phf_generator"]
