[package]
name = "rquickjs-core"
version = "0.0.5"
authors = ["Mees Delzenne <mees.delzenne@gmail.com>", "K. <kayo@illumium.org>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "High level bindings to the quickjs javascript engine"
repository = "https://github.com/DelSkayn/rquickjs.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.fxhash]
version = "0.2.1"
optional = true

[dependencies.phf]
version = "^0.8"
optional = true

[dependencies.indexmap]
version = "^1"
optional = true

[dependencies.either]
version = "^1"
optional = true

[dependencies.rquickjs-sys]
version = "0.0.4"
path = "../rquickjs-sys"

[dependencies.tokio-rs]
package = "tokio"
version = "^0.3"
optional = true
default-features = false
features = ["rt"]

[dependencies.async-std-rs]
package = "async-std"
version = "^1.7"
optional = true
default-features = false
features = ["default", "unstable"]

[dependencies.dlopen]
version = "^0.1"
optional = true

[dependencies.relative-path]
version = "^1.3"
optional = true

[features]
default = []

# Features which is used for documentation
rustdoc = ["exports", "loader", "allocator", "dyn-load", "either", "indexmap", "registery", "classes", "properties", "async-std"]

# Use bindgen to generate bindings at compile-type
# otherwise bundled bindings will be used
bindgen = ["rquickjs-sys/bindgen"]

# Enable support of parallel execution
parallel = ["rquickjs-sys/parallel"]

# Enable runtime registery
registery = ["fxhash"]

# Enable support of reading module exports
exports = ["rquickjs-sys/exports"]

# Enable user-defined module loader support
loader = ["relative-path"]

# Enable native module loading support
dyn-load = ["loader", "dlopen"]

# Enable user-defined allocator support
allocator = []

# Use Rust global allocator by default
# otherwise libc allocator will be used
rust-alloc = ["allocator"]

# Enable user-defined classes support
classes = []

# Enable user-defined properties support
properties = []

# Enable interop between Rust futures and JS Promises
futures = []

# Enable deferred Promise resolution
deferred-resolution = []

# Enable Tokio async runtime support
tokio = ["futures", "tokio-rs"]

# Enable Async-std runtime support
async-std = ["futures", "async-std-rs"]

# Max number of function args
max-args-7 = []
max-args-8 = ["max-args-7"]
max-args-9 = ["max-args-8"]
max-args-10 = ["max-args-9"]
max-args-11 = ["max-args-10"]
max-args-12 = ["max-args-11"]
max-args-13 = ["max-args-12"]
max-args-14 = ["max-args-13"]
max-args-15 = ["max-args-14"]
max-args-16 = ["max-args-15"]

# Enable QuickJS dumps for debug
dump-bytecode = ["rquickjs-sys/dump-bytecode"]
dump-gc = ["rquickjs-sys/dump-gc"]
dump-gc-free = ["rquickjs-sys/dump-gc-free"]
dump-free = ["rquickjs-sys/dump-free"]
# Dump JS values which still alive when runtime is freed
dump-leaks = ["rquickjs-sys/dump-leaks"]
dump-mem = ["rquickjs-sys/dump-mem"]
dump-objects = ["rquickjs-sys/dump-objects"]
dump-atoms = ["rquickjs-sys/dump-atoms"]
dump-shapes = ["rquickjs-sys/dump-shapes"]
dump-module-resolve = ["rquickjs-sys/dump-module-resolve"]
dump-promise = ["rquickjs-sys/dump-promise"]
dump-read-object = ["rquickjs-sys/dump-read-object"]

# Enable compilation tests
compile-tests = []

# Enable unstable doc-cfg feature (for docs.rs)
doc-cfg = []

[dev-dependencies.futures-rs]
package = "futures"
version = "^0.3"

[dev-dependencies.tokio-rs]
package = "tokio"
version = "^0.3"
default-features = false
features = ["rt", "time"]

[dev-dependencies.rquickjs]
path = "../"

[dev-dependencies]
trybuild = "1.0.23"

[package.metadata.docs.rs]
features = ["rustdoc", "doc-cfg"]
