[package]
name = "rquickjs-macro"
version = "0.0.1"
authors = ["K. <kayo@illumium.org>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "^1"
proc-macro-crate = "^0.1"
proc-macro-error = "^1"
quote = "^1"
ident_case = "^1"
fnv = "^1"
indexmap = "^1"

[dependencies.darling]
version = "^0.10.3"

[dependencies.syn]
version = "^1"
features = ["full"]

[dev-dependencies.rquickjs]
path = "../"
features = ["async-std", "macro", "classes"]

[dev-dependencies.async-std]
version = "^1"
features = ["attributes"]

[features]
