[package]
name = "rquickjs-sys"
version = "0.0.4"
authors = ["Mees Delzenne <mees.delzenne@gmail.com>"]
edition = "2018"
license = "MIT"
description = "quickjs bindings for rquickjs"
repository = "https://github.com/DelSkayn/rquickjs.git"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.66"

[build-dependencies]
cc = "1.0.50"

[build-dependencies.bindgen-rs]
package = "bindgen"
version = "0.55.1"
optional = true

[features]
parallel = []
exports = []
bindgen = ["bindgen-rs"]

# Special case for updating bundled bindings
update-bindings = ["bindgen"]
