[package]
name = "rquickjs-sys"
version = "0.0.4"
authors = ["Mees Delzenne <mees.delzenne@gmail.com>"]
edition = "2018"
license = "MIT"
description = "quickjs bindings for rquickjs"
repository = "https://github.com/DelSkayn/rquickjs.git"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0.66"

[build-dependencies.bindgen-rs]
package = "bindgen"
version = "0.56.0"
optional = true

[build-dependencies.pretty_env_logger]
version = "0.4.0"
optional = true

[features]
parallel = []
exports = []
bindgen = ["bindgen-rs"]

# Debug logging
logging = ["pretty_env_logger"]
# Special case for updating bundled bindings
update-bindings = ["bindgen"]

# Enable QuickJS dumps
dump-bytecode = []
dump-gc = []
dump-gc-free = []
dump-free = []
dump-leaks = []
dump-mem = []
dump-objects = []
dump-atoms = []
dump-shapes = []
dump-module-resolve = []
dump-promise = []
dump-read-object = []
