[package]
name = "rquickjs-sys"
version = "0.1.0"
authors = ["Mees Delzenne <mees.delzenne@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "quickjs bindings for rquickjs"
keywords = ["quickjs", "ecmascript", "javascript", "es6", "es2020"]
categories = ["external-ffi-bindings"]
repository = "https://github.com/DelSkayn/rquickjs.git"

[build-dependencies]
cc = "^1"

[build-dependencies.bindgen-rs]
package = "bindgen"
version = "^0.56"
optional = true

[build-dependencies.pretty_env_logger]
version = "^0.4"
optional = true

[features]
parallel = []
exports = []
bindgen = ["bindgen-rs"]

# Debug logging
logging = ["pretty_env_logger"]
# Special case for updating bundled bindings
update-bindings = ["bindgen"]

# Enable QuickJS dumps
dump-bytecode = []
dump-gc = []
dump-gc-free = []
dump-free = []
dump-leaks = []
dump-mem = []
dump-objects = []
dump-atoms = []
dump-shapes = []
dump-module-resolve = []
dump-promise = []
dump-read-object = []
