[package]
name = "rquickjs-sys"
version = "0.4.0"
authors = ["Mees Delzenne <mees.delzenne@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
description = "QuickJS bindings for rquickjs"
keywords = ["quickjs", "ecmascript", "javascript", "es6", "es2020"]
categories = ["external-ffi-bindings"]
repository = "https://github.com/DelSkayn/rquickjs.git"

[build-dependencies]
cc = "1"
diffy = "0.3.0"
newline-converter = "0.3.0"

[build-dependencies.bindgen-rs]
package = "bindgen"
version = "0.66"
optional = true

[build-dependencies.pretty_env_logger]
version = "0.5"
optional = true

[features]
exports = []
bindgen = ["bindgen-rs"]

# Debug logging
logging = ["pretty_env_logger"]
# Special case for updating bundled bindings
update-bindings = ["bindgen"]

# Enable QuickJS dumps
dump-bytecode = []
dump-gc = []
dump-gc-free = []
dump-free = []
dump-leaks = []
dump-mem = []
dump-objects = []
dump-atoms = []
dump-shapes = []
dump-module-resolve = []
dump-promise = []
dump-read-object = []
