[package]
name = "rquickjs-sys"
readme = "README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
repository.workspace = true
categories = ["external-ffi-bindings"]

[build-dependencies]
cc = "1"

[build-dependencies.bindgen-rs]
package = "bindgen"
version = "0.71"
optional = true

[build-dependencies.pretty_env_logger]
version = "0.5"
optional = true

[features]
bindgen = ["bindgen-rs"]

# Debug logging
logging = ["pretty_env_logger"]
# Special case for updating bundled bindings
update-bindings = ["bindgen"]

# Enable QuickJS dumps
dump-bytecode = []
dump-gc = []
dump-gc-free = []
dump-free = []
dump-leaks = []
dump-mem = []
dump-objects = []
dump-atoms = []
dump-shapes = []
dump-module-resolve = []
dump-promise = []
dump-read-object = []
